[package]
description = " Netfilter NFLOG high-level bindings"
license = "GPL-2.0+"
keywords = ["netfilter","log","nflog"]
homepage = "https://github.com/chifflier/nflog-rs"
repository = "https://github.com/chifflier/nflog-rs.git"

name = "nflog"
version = "0.9.0"
authors = [ "Pierre Chifflier <chifflier@wzdftpd.net>", "Zachary Dremann <dremann@gmail.com" ]

[dependencies]
libc = "0.2"
nflog-sys = { path = "nflog-sys" }
bitflags = "1.0"

[workspace]
members = ["nflog-sys", "nfnetlink-sys"]