[package]
name = "nflog"
description = "Netfilter NFLOG high-level bindings"
version = "0.10.0"
license = "GPL-2.0+"
keywords = ["netfilter", "log", "nflog"]
homepage = "https://github.com/chifflier/nflog-rs"
repository = "https://github.com/chifflier/nflog-rs.git"

authors = ["Pierre Chifflier <chifflier@wzdftpd.net>", "Zachary Dremann <dremann@gmail.com"]

[dependencies]
libc = "0.2"
nflog-sys = { path = "nflog-sys" }
bitflags = "1.0"

[workspace]
members = ["nflog-sys", "nfnetlink-sys"]